src/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpareName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>配件名称</label>
        <referenceTo>Product3__c</referenceTo>
        <relationshipLabel>工作订单行项目</relationshipLabel>
        <relationshipName>SpareName1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpareNumber__c</fullName>
        <formula>SpareName__r.MaterialCoding__c</formula>
        <label>配件编号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SparePartNumber1__c</fullName>
        <label>配件序列号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>